@@ -1,3 +1,9 @@
+2002-09-27  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c (cb_check_for_uniqueness) : new.
+	(accel_edited_callback) : don't let a user enter duplicate
+	  accelerators for different actions.
+
 2002-09-24  Jody Goldber <jody@gnome.org>
 
 	* Release 2.0.2.91
